# rct_rag

./: .dockerignore  .gitignore  .~lock.presentationVendredi.pptx#  CodeSparse.drawio  Dockerfile  Presentation.pptx  README.md  mkdocs.yml  notes.txt  presentationVendredi.pptx  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
Analyse_json/: desciptif_wordcloud.py  desciptif_wordcloud_prepro.py  descriptif_termes.py  descriptif_termes_prepro.py  preprocessing.py
Analyse_json/Acronyme/: Recherche_abbreviation_CAALL.py  Recherche_abbreviation_CAMOVID.py  Recherche_abbreviation_D1.py  Recherche_abbreviation_graall.py  Recherche_abbreviation_ruby.py  abbreviations.json  acronym_caall.json  acronym_camovid.json  acronym_d1.json  acronym_graall.json  acronym_ruby.json  final_acronyms.json  fusion_json.py  unique_abbreviations.json
Analyse_json/TFIDF/: descriptif_tf_etude.py  descriptif_tf_etude_prepro.py  descriptif_tf_section.py  descriptif_tf_section_prepro.py  test_graph_top_section.py
Analyse_json/WORDCLOUD/: desciptif_wordcloud.py  desciptif_wordcloud_prepro.py  explain.txt
Analyse_json/section_term_frequency/: descriptif_termes.py  descriptif_termes_prepro.py
Builder/: main_builder.py
Builder/Acronymes/: Acronym_merge.py  Acronyms_extract_definition.py  Acronyms_extract_tab.py  Acronyms_unique.py  __init__.py  fusion_json.py
Builder/Config/: __init__.py  paths.py
Builder/Data/: document_exact.pkl  document_sparse.pkl  extracted_acronym_final.json  list_sections.json  sections_sorted.json  sections_sorted_full.json  sparse_matrix.npz  study_ids.npy  summarySparse_pre.json  unique_acronym.json
Builder/Exact/: exact_document_generator.py
Builder/Extract/: ExtractPDF_JSON.py  __init__.py
Builder/Sections/: __init__.py  json_section_regroup.py  json_section_regroup_clean.py  json_section_regroup_clean_complet.py  json_section_regroup_full.py
Builder/Sparse/: Vectorizer.py  __init__.py  document_generator.py
Builder/Utils/: __init__.py  preprocess_exact.py  preprocess_sparse.py  top_terms_by_study.py
Extract_docx/: Gather_to_json.py  extract_summary.py  extract_titre_para.py  json_clean_final.py
PDF_Re/: final_output.json
PDF_Re/Acronym/: Abbreviation_extract.py  Abbreviation_unique.py  (+18 more)
POC/: POC_V1_IDF-COS.py  POC_V1_IDF-JAC.py  POC_V1_IDF-MAN.py  POC_V1_Streamlit_IDF-EUC.py  test_manhattan.py
Search_Engine/: main.py
Summary/: FULL.json  Summary_gather.py  json_final.py  summary_tables.json  summary_tables_gather.json  title_mapping_FULL.json
TFIDF_SPARSE/: main.py
TFIDF_SearchEngine_V4_Clean/: main.py  requirements.txt
Train/: TF_IDF.py  Visualizer_TF_IDF.py  distance_Dice.py  distance_cosine.py  distance_euclidienne.py  distance_haming.py  distance_jaccard.py  test_manhattan.py
about/: index.html
builder/: main_builder.py
config/: config.py
docs/: README.md  about.md  index.md
get_bdd/: keep_relevant_trials.py  retrieve_bdd.py
information_retrieval/: corpus_design.py  main.py  preprocess_text.py
rag/: extract_pages.py  gen_embedding.py  page_embedding.py  query.py  query_pages.py  query_vectordb.py  store_embedding.py
search_engine/: main.py
site/: 404.html  index.html
systematic_review/: abstract.py  review.py  supervised_check.py
tests/: test_query_preprocessed.py  test_query_preprocessed_ex.py
(+341 files in other folders)
