[project]
name = "rct-rag"
version = "0.1.0"
description = "Clinical Trials Search Engines "
authors = [
    {name = "Loris Dematini",email = "loris.dematini@yahoo.fr"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "altair (==5.5.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asttokens (==3.0.0)",
    "attrs (==25.3.0)",
    "blinker (==1.9.0)",
    "cachetools (==5.5.2)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "comm (==0.2.2)",
    "contourpy (==1.3.2)",
    "cryptography (==45.0.4)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.14)",
    "decorator (==5.2.1)",
    "executing (==2.2.0)",
    "fonttools (==4.58.4)",
    "gitdb (==4.0.12)",
    "gitpython (==3.1.44)",
    "greenlet (==3.2.2)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "ipykernel (==6.29.5)",
    "ipython (==9.4.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.0)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.23.0)",
    "jsonschema-specifications (==2025.4.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "kiwisolver (==1.4.8)",
    "langchain (==0.3.25)",
    "langchain-core (==0.3.60)",
    "langchain-text-splitters (==0.3.8)",
    "langsmith (==0.3.42)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.3)",
    "matplotlib-inline (==0.1.7)",
    "narwhals (==1.40.0)",
    "nest-asyncio (==1.6.0)",
    "nltk (==3.7)",
    "numpy (==2.2.6)",
    "orjson (==3.10.18)",
    "packaging (>=23.2,<25)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pdfminer-six (==20250506)",
    "pdfplumber (==0.11.7)",
    "pexpect (==4.9.0)",
    "pillow (==11.2.1)",
    "platformdirs (==4.3.8)",
    "prompt-toolkit (==3.0.51)",
    "protobuf (==6.31.0)",
    "psutil (==7.0.0)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pyarrow (==20.0.0)",
    "pycparser (==2.22)",
    "pydantic (==2.11.4)",
    "pydantic-core (==2.33.2)",
    "pydeck (==0.9.1)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.3)",
    "pypdfium2 (==4.30.1)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "pyzmq (==27.0.0)",
    "referencing (==0.36.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "rpds-py (==0.25.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.3)",
    "six (==1.17.0)",
    "smmap (==5.0.2)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "stack-data (==0.6.3)",
    "streamlit (==1.45.1)",
    "tenacity (==9.1.2)",
    "threadpoolctl (==3.6.0)",
    "toml (==0.10.2)",
    "tornado (==6.5.1)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.4.0)",
    "watchdog (==6.0.0)",
    "wcwidth (==0.2.13)",
    "zstandard (==0.23.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.17,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
